xxxx/xx/xx

* Bug Fixes *

 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - #5646, Crash on collections with empty members (Paul Ramsey)


PostGIS 3.0.10
2023/11/19

* Bug Fixes *

  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5568, Improve robustness of topology face split handling (Sandro Santilli)
  - #5616, Fix to find docbook on newer docbook installs (Regina Obe)

PostGIS 3.0.9
2023/05/29

* Bug Fixes *

  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5338, Dump/Restore of raster table fails on
           enforce_coverage_tile_rast constraint (Regina Obe)
  - #5315, #5319, #5320, #5342 crashes on infinite coordinates
          (Regina Obe, Paul Ramsey)
  - #5344, Include topology id sequence state in dumps (Sandro Santilli)
  - #5288, ST_LineCrossingDirection multi-cross error (Paul Ramsey)
  - #5347, _ST_BestSRID crashes on ARM with infinite geometries (Regina Obe)

PostGIS 3.0.8
2022/11/11

* Bug and Security Fixes *
  - [security] Add schema qual to upgrade util (Regina Obe)
  - #5240, ST_DumpPoints crash with empty polygon (Regina Obe)
  - #4648, [security] Check function ownership at extension
           packaging time (Sandro Santilli)
           Thanks to Sven Klemm (Timescale) for the report
  - #5241, Crash on ST_SnapToGrid with empty multis (Regina Obe)
  - #5234, Fix 2.5d topology building regression (Sandro Santilli)
  - #5280, shp2pgsql: Handle load of dbase character fields with no width
           specified (Regina Obe)
  - #5084, Bad rasterization of linestring (Gilles Vuidel)

PostGIS 3.0.7
2022/08/18

* Bug Fixes *
  - #5202, Guard against downgrades (Sandro Santilli)